--- a/stylesheet.css
+++ b/stylesheet.css
@@ -9,7 +9,7 @@
     font-family: Arial, sans-serif;
   }
   
-  /* Header Styles */
+  /* Header Styles (Section 1)*/
   header {
     display: flex;
     justify-content: space-between;
@@ -38,4 +38,56 @@
     color: #e5e7eb;
     font-size: 18px;
     text-decoration: none;
+  }
+
+  /* cta section styles (Section 2)*/
+
+  .cta-section {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    background-color: #1f2937;
+    padding: 64px;
+  }
+  
+  .cta-content {
+    flex: 1;
+    max-width: 50%;
+  }
+  
+  .cta-content h2 {
+    font-size: 48px;
+    font-weight: 800;
+    margin-bottom: 0px;
+    color: #e5e7eb;
+  }
+
+  .cta-content p {
+    font-size: 18px;
+    margin-bottom: 0px;
+    color: #e5e7eb;
+    margin-bottom: 10px;
+  }
+
+  button {
+    background-color: #3882f6;
+    color: #f9faf8;
+    font-size: 16px;
+    padding: 6px 12px;
+    border: none;
+    border-radius: 8px;
+    cursor: pointer;
+  }
+  
+  .cta-image {
+    flex: 1;
+    max-width: 50%;
+    text-align: right;
+  }
+  
+  .cta-image img {
+    width: 100%;
+    max-width: 400px;
+    border-radius: 8px;
   }
